backend/services/address/deploy/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-address-service
  namespace: ecommerce
spec:
  selector:
    app: ecommerce-address
  ports:
    - protocol: TCP
      port: 30009
      targetPort: 30009
  type: LoadBalancer
